--- a/gtk-3.0/settings.ini
+++ b/gtk-3.0/settings.ini
@@ -1,12 +1,12 @@
-[ 
-ettings]
-gtk-theme-name=Fantome
-gtk-icon-theme-name=elementary-xfce-darker
+[Settings]
+gtk-application-prefer-dark-theme=1
+gtk-theme-name=Arc-Dark
+gtk-icon-theme-name=hicolor
 gtk-font-name=Sans 10
-gtk-cursor-theme-name=DMZ-White
+gtk-cursor-theme-name=elementary
 gtk-cursor-theme-size=0
 gtk-toolbar-style=GTK_TOOLBAR_BOTH
-gtk-toolbar-icon-size=GTK_ICON_SIZE_SMALL_TOOLBAR
+gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
 gtk-button-images=1
 gtk-menu-images=1
 gtk-enable-event-sounds=1
