--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,7 +1,5 @@
 vim:fileencoding=utf-8:ft=conf
-include ./theme.conf
-
-
+include ~/.config/kitty/themes/Blazer.conf 
 
 # You can get a list of full family names available on your computer by running kitty list-fonts
 
